# Ayoub-AI-assistant

./: .env.example  .gitignore  Ayoub.md  CHANGELOG.md  ENHANCEMENTS.md  GEMINI_MODELS.md  LICENSE  MANUAL.md  README.md  USER_GUIDE.md  implementation_plan.md  ollama_models.txt  progress.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
ayoub/: __init__.py  cli.py  config.py  logger.py  screen_capture.py
ayoub/agent/: __init__.py  base_llm.py  base_prompt.py  base_runtime.py  humanloop_runtime.py  react_runtime.py  toolkit.py
ayoub/llm/: __init__.py  base.py  deepseek_llm.py  gemini.py  gemini_embed.py  groq_llm.py  ollama_llm.py  openai_llm.py
ayoub/mcp_server/: __init__.py  server.py
ayoub/mcp_server/tools/: __init__.py  browser.py  system.py  utils.py  web.py
ayoub/memory/: __init__.py  file_memory.py
ayoub/modules/: __init__.py  ask_agent.py  chat_agent.py  generate_agent.py  main_agent.py  memory_agent.py  model_switcher.py  ollama_collab.py  screen_agent.py  search_agent.py
ayoub/tools/: __init__.py  browser_tool.py  image_gen_tool.py  pdf_tool.py  python_exec_tool.py  scrape_tool.py  screen_tool.py  search_tool.py  system_tools.py  web_tools.py
ayoub/voice/: __init__.py  agent.py
data/: search_history.txt
helpers/: __init__.py  dispatch_agent.py  generate_token.py  image_utils.py  sketch_window.py
templates/: brainstorm.txt  code_review.txt  debug.txt  explain.txt  image_prompt.txt  plan.txt  research.txt  summarize.txt  translate.txt  write_email.txt
